--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
   <div class="books">
     <h2>My Books</h2>
     <div class="book">
-      <img src="23bc9ba0-84c7-4db8-b41e-7ce754ecd3fb.jpg" alt="Diabetic Diet After 60 for Beginners book cover">
+      <img src="23bc9ba0-84c7-4db8-b41e-7ce754ecd3fb.jpg" alt="Cover of Diabetic Diet After 60">
       <h3>Diabetic Diet After 60 for Beginners</h3>
-      <p>Unlock Delicious Low-Sugar Meals to Control Blood Sugar and Rediscover Joy After 60 with Simple Recipes and Essential Shopping Lists</p>
+      <p>Unlock delicious low-sugar meals to control blood sugar and rediscover joy after 60 with simple recipes and essential shopping lists.</p>
       <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
     </div>
     <div class="book">
-      <img src="Copertina Kindle (1).jpg" alt="Copertina del libro Dr. Now">
+      <img src="Copertina Kindle (1).jpg" alt="Cover of Dr. Now Book">
       <h3>The Dr. Now 1200-Calorie Diet Plan</h3>
-      <p>Achieve lasting weight loss and transform your body with simple, practical recipes.</p>
+      <p>Achieve lasting weight loss and transform your body with simple and practical recipes.</p>
       <a href="https://www.amazon.com/Dr-Now-1200-Calorie-Diet-Plan/dp/B0DTYMY6JF" target="_blank">Buy on Amazon</a>
     </div>
   </div>
