--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
     </div>
     <div class="book">
-      <img src="Copertina Kindle (1).jpg" alt="Cover of Dr. Now Book">
+      <img src="dr-now-cover.jpg" alt="Cover of Dr. Now Book">
       <h3>The Dr. Now 1200-Calorie Diet Plan</h3>
       <p>Achieve lasting weight loss and transform your body with simple and practical recipes.</p>
       <a href="https://www.amazon.com/Dr-Now-1200-Calorie-Diet-Plan/dp/B0DTYMY6JF" target="_blank">Buy on Amazon</a>
