--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   <div class="books">
     <h2>My Books</h2>
     <div class="book">
-      <img src="23bc9ba0-84c7-4db8-b41e-7ce754ecd3fb.jpg" alt="Cover of Diabetic Diet After 60">
+      <img src="diabetic-dopo-i-60.jpg.jpg" alt="Cover of Diabetic Diet After 60">
+
       <h3>Diabetic Diet After 60 for Beginners</h3>
       <p>Unlock delicious low-sugar meals to control blood sugar and rediscover joy after 60 with simple recipes and essential shopping lists.</p>
       <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
