--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
   </div>
 
   <div class="books">
-    <h2>My Books</h2>
-    <div class="book">
-    <img src="dieta-per-diabetici-dopo-i-60.jpg" alt="Cover of Diabetic Diet After 60">
-     
-      <h3>Diabetic Diet After 60 for Beginners</h3>
-      <p>Unlock delicious low-sugar meals to control blood sugar and rediscover joy after 60 with simple recipes and essential shopping lists.</p>
-      <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
-    </div>
-    <div class="book">
-      <img src="dr-now-cover.jpg" alt="Cover of The Dr. Now 1200-Calorie Diet Plan">
-      <h3>The Dr. Now 1200-Calorie Diet Plan</h3>
-      <p>Achieve lasting weight loss and transform your body with simple and practical recipes.</p>
-      <a href="https://www.amazon.com/Dr-Now-1200-Calorie-Diet-Plan/dp/B0DTYMY6JF" target="_blank">Buy on Amazon</a>
-    
-    </div>
+  <h2>My Books</h2>
+
+  <div class="book">
+    <img src="diabetic-after-60.jpg" alt="Cover of Diabetic Diet After 60">
+    <h3>Diabetic Diet After 60 for Beginners</h3>
+    <p>Enjoy low-sugar meals to control your blood sugar and rediscover joy after 60.</p>
+    <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
   </div>
+
+  <div class="book">
+    <img src="dr-now-cover.jpg" alt="Cover of The Dr. Now 1200-Calorie Diet Plan">
+    <h3>The Dr. Now 1200-Calorie Diet Plan</h3>
+    <p>Lose weight and transform your body with simple, effective meals.</p>
+    <a href="https://www.amazon.com/Dr-Now-1200-Calorie-Diet-Plan/dp/B0DTYMY6JF" target="_blank">Buy on Amazon</a>
+  </div>
+</div>
 
   <div class="about">
     <h2>About the Author</h2>
