--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <h2>My Books</h2>
 
   <div class="book">
-    <img src="diabetic-after-60.jpg" alt="Cover of Diabetic Diet After 60">
+    <img src="diabetici-dopo-i-60.jpg" alt="Cover of Diabetic Diet After 60">
     <h3>Diabetic Diet After 60 for Beginners</h3>
     <p>Enjoy low-sugar meals to control your blood sugar and rediscover joy after 60.</p>
     <a href="https://www.amazon.com/dp/B0F2TMK6ZQ" target="_blank">Buy on Amazon</a>
